# fsm

./: .bumpversion.cfg  .editorconfig  .envrc  README.md  pyproject.toml
.github/: ISSUE_TEMPLATE.md
fsm/: README.md  __init__.py  checker.py  cli.py  dispatcher.py  graph.py  pkg.py  pkgrepo.py  pyproject.py  repo.py  resolver.py  transaction.py  util.py
